[gd_scene load_steps=30 format=4 uid="uid://c7yvtal3auu47"]

[ext_resource type="Script" uid="uid://dbt1e7mgurvbj" path="res://Scripts/MenuSpecific/main_menu.gd" id="1_ovv58"]
[ext_resource type="PackedScene" uid="uid://crrp8ng8lxo4o" path="res://TileMaps_or_Similar/Virellia/Virellia_Ground.tscn" id="1_ql4tj"]
[ext_resource type="PackedScene" uid="uid://tie7m42q5wke" path="res://TileMaps_or_Similar/Virellia/Virellia_Spikes.tscn" id="2_l6a1n"]
[ext_resource type="Texture2D" uid="uid://b1cgkpme7gkxp" path="res://Textures/Virellia/other_textures/Virellia_Background_Gradiant.png" id="3_adxe2"]
[ext_resource type="Texture2D" uid="uid://c6v4a0rt6aj7g" path="res://Textures/Virellia/other_textures/CrystalSpire.png" id="4_mm4is"]
[ext_resource type="Texture2D" uid="uid://cpvyapimqa8ud" path="res://Textures/Virellia/other_textures/Virellia_Background_Gradiant_transparent.png" id="5_ovv58"]
[ext_resource type="Texture2D" uid="uid://c54x45h844ypr" path="res://Textures/Virellia/enemy_textures/Future_Spider.png" id="6_2560o"]
[ext_resource type="Texture2D" uid="uid://opuc8o4btmai" path="res://Textures/Interplanetary_textures/Basic_Spacesuit-Spritesheet.png" id="7_w336a"]
[ext_resource type="Texture2D" uid="uid://c7ycg8i3msjlg" path="res://Textures/Virellia/other_textures/clouds/virellia_cloud_6.png" id="8_mm4is"]
[ext_resource type="Texture2D" uid="uid://buvvuspq2bybb" path="res://Textures/Virellia/other_textures/clouds/virellia_cloud_2.png" id="9_ovv58"]
[ext_resource type="Texture2D" uid="uid://r3oga52uvoks" path="res://Textures/Virellia/other_textures/clouds/virellia_cloud_4.png" id="10_2560o"]

[sub_resource type="AtlasTexture" id="AtlasTexture_l7aij"]
atlas = ExtResource("4_mm4is")
region = Rect2(48, 0, 48, 112)

[sub_resource type="SpriteFrames" id="SpriteFrames_kx6r2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l7aij")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_1utqq"]
atlas = ExtResource("6_2560o")
region = Rect2(64, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_ubdel"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1utqq")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_oub8p"]
atlas = ExtResource("7_w336a")
region = Rect2(192, 192, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_0g1jl"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_oub8p")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ovv58"]
bg_color = Color(1, 1, 1, 0.498039)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1utqq"]
bg_color = Color(1, 1, 1, 0.498039)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mm4is"]
bg_color = Color(1, 1, 1, 0.498039)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2560o"]
bg_color = Color(1, 1, 1, 0.498039)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ubdel"]
bg_color = Color(1, 1, 1, 0.498039)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_w336a"]
bg_color = Color(1, 1, 1, 0.498039)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_l7aij"]
bg_color = Color(1, 1, 1, 0.498039)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_oub8p"]
bg_color = Color(1, 1, 1, 0.498039)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kx6r2"]
bg_color = Color(1, 1, 1, 0.498039)

[sub_resource type="Theme" id="Theme_ovv58"]
TextEdit/colors/background_color = Color(1, 1, 1, 0.466667)
TextEdit/colors/font_readonly_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ovv58"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0g1jl"]
bg_color = Color(1, 1, 1, 0.529412)

[node name="MainMenu" type="Node"]
script = ExtResource("1_ovv58")

[node name="MainMenuStructureVirellia" type="Node2D" parent="."]

[node name="Camera2D" type="Camera2D" parent="MainMenuStructureVirellia"]
position = Vector2(0, -28)

[node name="VirelliaGround" parent="MainMenuStructureVirellia" instance=ExtResource("1_ql4tj")]
tile_map_data = PackedByteArray("AAD7/wMAAAAAAAAAAAD8/wMAAAAAAAAAAAD9/wIAAAAAAAAAAAD9/wMAAAAAAAAAAAD+/wIAAAAAAAAAAAD+/wMAAAAAAAAAAAD//wEAAAAAAAAAAAAAAAEAAAAAAAAAAAABAAEAAAAAAAAAAAABAAIAAAAAAAAAAAAAAAIAAAAAAAAAAAD//wIAAAAAAAAAAAD//wMAAAAAAAAAAAAAAAMAAAAAAAAAAAABAAMAAAAAAAAAAAAEAAMAAAAAAAAAAAA=")

[node name="VirelliaSpikes" parent="MainMenuStructureVirellia" instance=ExtResource("2_l6a1n")]
position = Vector2(448, 448)

[node name="VirelliaSpikes2" parent="MainMenuStructureVirellia" instance=ExtResource("2_l6a1n")]
position = Vector2(576, 448)

[node name="VirelliaSpikes3" parent="MainMenuStructureVirellia" instance=ExtResource("2_l6a1n")]
position = Vector2(704, 448)

[node name="VirelliaBackgroundGradiant" type="Sprite2D" parent="MainMenuStructureVirellia"]
position = Vector2(-14, -26)
scale = Vector2(8.33594, 5.23438)
texture = ExtResource("3_adxe2")

[node name="Spire" type="AnimatedSprite2D" parent="MainMenuStructureVirellia"]
z_index = 1
position = Vector2(-386, -54)
scale = Vector2(8, 8)
sprite_frames = SubResource("SpriteFrames_kx6r2")

[node name="VirelliaBackgroundGradiantTransparent" type="Sprite2D" parent="MainMenuStructureVirellia"]
z_index = 2
position = Vector2(-14, -26)
scale = Vector2(8.336, 5.234)
texture = ExtResource("5_ovv58")

[node name="Enemy" type="AnimatedSprite2D" parent="MainMenuStructureVirellia"]
z_index = 2
position = Vector2(85, 64)
scale = Vector2(4, 4)
sprite_frames = SubResource("SpriteFrames_ubdel")

[node name="Player" type="AnimatedSprite2D" parent="MainMenuStructureVirellia"]
z_index = 2
position = Vector2(-290, -91)
scale = Vector2(6, 6)
sprite_frames = SubResource("SpriteFrames_0g1jl")

[node name="VirelliaCloud6" type="Sprite2D" parent="MainMenuStructureVirellia"]
z_index = 2
position = Vector2(-606, -408)
scale = Vector2(4, 4)
texture = ExtResource("8_mm4is")

[node name="VirelliaCloud2" type="Sprite2D" parent="MainMenuStructureVirellia"]
z_index = 2
position = Vector2(582, -76)
scale = Vector2(4, 4)
texture = ExtResource("9_ovv58")

[node name="VirelliaCloud4" type="Sprite2D" parent="MainMenuStructureVirellia"]
z_index = 2
position = Vector2(-74, -525)
scale = Vector2(4, 4)
texture = ExtResource("10_2560o")

[node name="MainMenuUI" type="Control" parent="."]
z_index = 8
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1120.0
offset_top = -684.0
offset_right = -1120.0
offset_bottom = -684.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="MainMenuUI"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenuUI/MarginContainer"]
layout_mode = 2

[node name="Play" type="Button" parent="MainMenuUI/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.385558, 0.577629, 1, 1)
theme_override_colors/icon_pressed_color = Color(0.384314, 0.498039, 1, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0.384314, 0.576471, 1, 1)
theme_override_font_sizes/font_size = 64
theme_override_styles/hover = SubResource("StyleBoxFlat_ovv58")
theme_override_styles/pressed = SubResource("StyleBoxFlat_1utqq")
theme_override_styles/normal = SubResource("StyleBoxFlat_mm4is")
text = "Play"

[node name="Load" type="Button" parent="MainMenuUI/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_pressed_color = Color(0.384314, 0.498039, 1, 1)
theme_override_colors/font_hover_color = Color(0.384314, 0.498039, 1, 1)
theme_override_colors/icon_pressed_color = Color(0.384314, 0.498039, 1, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0.384314, 0.576471, 1, 1)
theme_override_font_sizes/font_size = 64
theme_override_styles/hover = SubResource("StyleBoxFlat_2560o")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ubdel")
theme_override_styles/normal = SubResource("StyleBoxFlat_w336a")
text = "Load"

[node name="Quit" type="Button" parent="MainMenuUI/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_pressed_color = Color(0.384314, 0.498039, 1, 1)
theme_override_colors/font_hover_color = Color(0.384314, 0.576471, 1, 1)
theme_override_colors/icon_pressed_color = Color(0.384314, 0.498039, 1, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0.384314, 0.576471, 1, 1)
theme_override_font_sizes/font_size = 64
theme_override_styles/hover = SubResource("StyleBoxFlat_l7aij")
theme_override_styles/pressed = SubResource("StyleBoxFlat_oub8p")
theme_override_styles/normal = SubResource("StyleBoxFlat_kx6r2")
text = "Quit Game"

[node name="Title" type="TextEdit" parent="MainMenuUI"]
layout_mode = 0
offset_left = -465.0
offset_top = -374.0
offset_right = 788.0
offset_bottom = -173.0
theme_override_font_sizes/font_size = 128
text = "Namless Platformer"
editable = false
context_menu_enabled = false
emoji_menu_enabled = false
shortcut_keys_enabled = false
selecting_enabled = false
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false
virtual_keyboard_enabled = false
middle_mouse_paste_enabled = false
empty_selection_clipboard_enabled = false

[node name="DataText" type="TextEdit" parent="MainMenuUI"]
z_index = 4
offset_left = -116.0
offset_top = 295.0
offset_right = 437.0
offset_bottom = 391.0
theme = SubResource("Theme_ovv58")
theme_override_font_sizes/font_size = 64
theme_override_styles/normal = SubResource("StyleBoxEmpty_ovv58")
theme_override_styles/read_only = SubResource("StyleBoxFlat_0g1jl")
text = "Save Data Loaded"
editable = false
context_menu_enabled = false
emoji_menu_enabled = false
shortcut_keys_enabled = false
selecting_enabled = false
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false
virtual_keyboard_enabled = false
middle_mouse_paste_enabled = false
empty_selection_clipboard_enabled = false

[connection signal="pressed" from="MainMenuUI/MarginContainer/VBoxContainer/Play" to="." method="_on_play"]
[connection signal="pressed" from="MainMenuUI/MarginContainer/VBoxContainer/Load" to="." method="_on_load"]
[connection signal="pressed" from="MainMenuUI/MarginContainer/VBoxContainer/Quit" to="." method="_on_quit"]
